# clawlingua

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  DOCKER_UNRAID_zh.md  Dockerfile  ENV_EXAMPLE.md  LICENSE  README.md  README_zh.md  docker-compose.yml  man_clawlearn.en.txt  man_clawlearn.zh.txt  man_clawlingua.en.txt  man_clawlingua.zh.txt  pyproject.toml  requirements.txt
docs/: SPEC.md  design.md
prompts/: cloze_contextual.json  cloze_contextual_example.json  cloze_prose_advanced.json  cloze_prose_beginner.json  cloze_prose_intermediate.json  cloze_prose_reading_support_advanced.json  cloze_prose_reading_support_beginner.json  cloze_prose_reading_support_intermediate.json  cloze_textbook_examples.json  cloze_transcript_advanced.json  cloze_transcript_advanced.json.bak  cloze_transcript_beginner.json  cloze_transcript_intermediate.json  cloze_transcript_reading_support_advanced.json  cloze_transcript_reading_support_beginner.json  cloze_transcript_reading_support_intermediate.json  extraction_prompt_20260412_210624.json  phrase_candidates_expression_mining_v2.json  template_explanation.json  template_extraction.json  translate_rewrite.json  user_prompt_overrides.json
templates/: anki_cloze_default.json
tests/: English_Conversation.txt  Ilya-Sutskever.md  Ilya_Sutskever.md  test_chunking.py  test_cli_domains.py  test_cli_help.py  test_cli_lingua_annotate.py  test_config.py  test_config_lingua_2phase.py  test_config_taxonomy_repair.py  test_deck_exporter.py  test_edge_tts.py  test_ingest.py  test_learning_modes.py  test_llm_parser.py  test_note_builder.py  (+4 more)
(+294 files in other folders)
