[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlingua"
version = "0.1.0"
description = "Build Anki cloze decks from local text files."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "typer>=0.12.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "orjson>=3.10.0",
  "edge-tts>=6.1.12",
  "genanki>=0.13.1",
  "chardet>=5.2.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1"]

[project.scripts]
clawlingua = "clawlingua.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
